--- a/.github/actions/libcloudphxx_build/action.yml
+++ b/.github/actions/libcloudphxx_build/action.yml
@@ -83,8 +83,8 @@ runs:
 
 
   # Debugging with a ssh session
-  - name: Setup tmate session
-    uses: mxschmitt/action-tmate@v3
+#  - name: Setup tmate session
+#    uses: mxschmitt/action-tmate@v3
 
     
   - name: Configure CMake
