--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -47,9 +47,9 @@ jobs:
         - mpi: "none"
           tag: "ubuntu_20_04_cuda_11_4"
           cxx: "g++"
-        - mpi: "mvapich2"
-          tag: "ubuntu_20_04_cuda_11_4_mvapich2"
-          cxx: "mpic++"
+#        - mpi: "mvapich2"
+#          tag: "ubuntu_20_04_cuda_11_4_mvapich2"
+#          cxx: "mpic++"
 
     steps:
     - uses: actions/checkout@v2
