--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -165,8 +165,8 @@ jobs:
     - run: mkdir parcel/plots/outputs
 
     # Debugging with a ssh session
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v3
+#    - name: Setup tmate session
+#      uses: mxschmitt/action-tmate@v3
 
     - name: run parcel unit_test
       working-directory: ${{github.workspace}}/parcel
