--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -23,8 +23,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: build libcloudph++
-      #uses: igfuw/libcloudphxx_build@v0.1-beta
-      uses: ./.github/actions/libcloudphxx_build
+      uses: igfuw/libcloudphxx_build@v0.2-beta
       with:
         disable_cuda: ${{matrix.disable_cuda}}
         build_type: ${{matrix.build_type}}
@@ -59,8 +58,7 @@ jobs:
 #      uses: mxschmitt/action-tmate@v3
 
     - name: build libcloudph++
-      #uses: igfuw/libcloudphxx_build@v0.1-beta
-      uses: ./.github/actions/libcloudphxx_build
+      uses: igfuw/libcloudphxx_build@v0.2-beta
       with:
         disable_cuda: ${{matrix.disable_cuda}}
         build_type: ${{matrix.build_type}}
@@ -107,8 +105,7 @@ jobs:
       run: tar -xvf build.tar
 
     - name: load UWLCM Singularity image
-      #uses: igfuw/libcloudphxx_build@v0.1-beta
-      uses: ./.github/actions/load_UWLCM_singularity_image
+      uses: igfuw/load_UWLCM_singularity_image@v0.1
       with:
         path: ${{ github.workspace }}/singularity_images
         tag: ${{ matrix.tag }}
@@ -143,8 +140,7 @@ jobs:
       run: sudo cmake --install build
 
     - name: load UWLCM Singularity image
-      #uses: igfuw/libcloudphxx_build@v0.1-beta
-      uses: ./.github/actions/load_UWLCM_singularity_image
+      uses: igfuw/load_UWLCM_singularity_image@v0.1
       with:
         path: ${{ github.workspace }}/singularity_images
 
@@ -219,8 +215,7 @@ jobs:
       run: tar -xvf build.tar
 
     - name: load UWLCM Singularity image
-      #uses: igfuw/libcloudphxx_build@v0.1-beta
-      uses: ./.github/actions/load_UWLCM_singularity_image
+      uses: igfuw/load_UWLCM_singularity_image@v0.1
       with:
         path: ${{ github.workspace }}/singularity_images
 
@@ -284,8 +279,7 @@ jobs:
     - run: grep diag_accr include/libcloudph++/lgrngn/particles.hpp
 
     - name: build libcloudph++
-      #uses: igfuw/libcloudphxx_build@v0.1-beta
-      uses: ./.github/actions/libcloudphxx_build
+      uses: igfuw/libcloudphxx_build@v0.2-beta
       with:
         disable_cuda: ${{matrix.disable_cuda}}
         build_type: ${{matrix.build_type}}
