--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -133,8 +133,8 @@ jobs:
       run: tar -xvf build.tar
 
     # Debugging with a ssh session
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v3
+#    - name: Setup tmate session
+#      uses: mxschmitt/action-tmate@v3
 
     - name: Install libcloudph++
       run: sudo cmake --install build
@@ -146,7 +146,7 @@ jobs:
         path: libmpdataxx
 
     - name: Install libmpdata++
-      uses: igfuw/libmpdataxx_install@v0.3
+      uses: igfuw/libmpdataxx_install@v0.4
       with:
         build_type: ${{matrix.build_type}}
         threads: 4
