--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -285,3 +285,10 @@ jobs:
     - name: run KiD LWP test
       working-directory: ${{github.workspace}}/kid-libcloud
       run: PYTHONPATH=${{ github.workspace }}/installed/usr/lib/python3/dist-packages singularity exec -B${{ github.workspace }}/installed  $SI bash ./.travis_scripts/lwp_test.sh
+
+  call_test_uwlcm_hlpr:
+    uses: igfuw/UWLCM/.github/workflows/test_uwlcm_hlpr.yml@master
+    with:
+      UWLCM_sha: "master"
+      libcloudphxx_sha: ${{ github.sha }} # merge PR SHA
+      libmpdataxx_sha: "master"
