GA: Portable version of the Relwithdebinfo config

--- a/.github/workflows/test_libclouphxx.yml
+++ b/.github/workflows/test_libclouphxx.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         name: ["CUDA"]
-        build_type: ["Debug", "RelWithDebInfo"]
+        build_type: ["Debug", "RelWithDebInfoPortable"]
         include:
         - name: "CUDA"
           disable_cuda: false
@@ -35,8 +35,7 @@ jobs:
     strategy:
       matrix:
         name: ["no_CUDA"]
-        build_type: ["Debug", "RelWithDebInfo"]
-        #build_type: ["RelWithDebInfo"]
+        build_type: ["Debug", "RelWithDebInfoPortable"]
         mpi: ["none", "mvapich2"]
         #mpi: ["none"]
         include:
@@ -81,7 +80,7 @@ jobs:
 
     strategy:
       matrix:
-        build_type: ["RelWithDebInfo", "Debug"]
+        build_type: ["Debug", "RelWithDebInfoPortable"]
         mpi: ["none", "mvapich2"]
         include:
         - mpi: "none"
@@ -118,7 +117,7 @@ jobs:
 
     strategy:
       matrix:
-        build_type: ["RelWithDebInfo"]
+        build_type: ["RelWithDebInfoPortable"]
         mpi: ["none"]
 
     steps:
@@ -182,11 +181,10 @@ jobs:
 
     strategy:
       matrix:
-        build_type: ["RelWithDebInfo", "Debug"]
-  #      build_type: ["RelWithDebInfo"]
+        build_type: ["Debug", "RelWithDebInfoPortable"]
         mpi: ["none"]
         include:
-        - build_type: "RelWithDebInfo"
+        - build_type: "RelWithDebInfoPortable"
           long_tests: true
           debug_tests: false
         - build_type: "Debug"
